// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadRowMobileView should not render access selector or date picker if access condition is not required to select 1`] = `
<WithStyles(ForwardRef(List))
  classes={
    Object {
      "root": "root",
    }
  }
>
  <WithStyles(ForwardRef(ListItem))
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <AttachmentIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="test.pdf (100 MB)"
      primaryTypographyProps={
        Object {
          "noWrap": true,
          "variant": "body1",
        }
      }
      secondary="File name"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`Component FileUploadRowMobileView should not render embargo date picker if access condition is set to closed access 1`] = `
<WithStyles(ForwardRef(List))
  classes={
    Object {
      "root": "root",
    }
  }
>
  <WithStyles(ForwardRef(ListItem))
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <AttachmentIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="test.pdf (100 MB)"
      primaryTypographyProps={
        Object {
          "noWrap": true,
          "variant": "body1",
        }
      }
      secondary="File name"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <LockOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      secondary="File access"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    >
      <WithStyles(FileUploadAccessSelector)
        autoFocus={false}
        disabled={false}
        locale={
          Object {
            "accessSelectOptionsText": Object {
              "8": "Closed Access",
              "9": "Open Access",
            },
            "errorMessage": "This field is required",
            "initialValue": "Select access conditions",
          }
        }
        onChange={[MockFunction]}
        value={8}
      />
    </WithStyles(ForwardRef(ListItemText))>
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <CalendarTodayOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primaryTypographyProps={
        Object {
          "variant": "body1",
        }
      }
      secondary="Embargo date"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(ListItemText))>
    <WithStyles(ForwardRef(ListItemSecondaryAction))
      classes={
        Object {
          "root": undefined,
        }
      }
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`Component FileUploadRowMobileView should render default view 1`] = `
<WithStyles(ForwardRef(List))
  classes={
    Object {
      "root": "root",
    }
  }
>
  <WithStyles(ForwardRef(ListItem))
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <AttachmentIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="test.pdf (100 MB)"
      primaryTypographyProps={
        Object {
          "noWrap": true,
          "variant": "body1",
        }
      }
      secondary="File name"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <LockOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      secondary="File access"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    >
      <WithStyles(FileUploadAccessSelector)
        autoFocus={false}
        disabled={false}
        locale={
          Object {
            "accessSelectOptionsText": Object {
              "8": "Closed Access",
              "9": "Open Access",
            },
            "errorMessage": "This field is required",
            "initialValue": "Select access conditions",
          }
        }
        onChange={[MockFunction]}
        value={null}
      />
    </WithStyles(ForwardRef(ListItemText))>
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <CalendarTodayOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primaryTypographyProps={
        Object {
          "variant": "body1",
        }
      }
      secondary="Embargo date"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(ListItemText))>
    <WithStyles(ForwardRef(ListItemSecondaryAction))
      classes={
        Object {
          "root": undefined,
        }
      }
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`Component FileUploadRowMobileView should render default view with styles 1`] = `
<FileUploadRowMobileView
  accessConditionId={null}
  classes={
    Object {
      "listItem": "FileUploadRowMobileView-listItem-2 listItem",
      "root": "FileUploadRowMobileView-root-1 root",
      "secondaryAction": "FileUploadRowMobileView-secondaryAction-3",
    }
  }
  disabled={false}
  embargoDate="01/01/2017"
  index={0}
  locale={
    Object {
      "embargoDateClosedAccess": "No date required",
      "embargoDateColumn": "Embargo date",
      "fileAccessColumn": "File access",
      "filenameColumn": "File name",
    }
  }
  name="test.pdf"
  onAccessConditionChange={[MockFunction]}
  onDelete={[MockFunction]}
  onEmbargoDateChange={[MockFunction]}
  requireOpenAccessStatus={true}
  size="100 MB"
/>
`;

exports[`Component FileUploadRowMobileView should render embargo date picker if access condition is set to open access 1`] = `
<WithStyles(ForwardRef(List))
  classes={
    Object {
      "root": "root",
    }
  }
>
  <WithStyles(ForwardRef(ListItem))
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <AttachmentIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="test.pdf (100 MB)"
      primaryTypographyProps={
        Object {
          "noWrap": true,
          "variant": "body1",
        }
      }
      secondary="File name"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <LockOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      secondary="File access"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    >
      <WithStyles(FileUploadAccessSelector)
        autoFocus={false}
        disabled={false}
        locale={
          Object {
            "accessSelectOptionsText": Object {
              "8": "Closed Access",
              "9": "Open Access",
            },
            "errorMessage": "This field is required",
            "initialValue": "Select access conditions",
          }
        }
        onChange={[MockFunction]}
        value={9}
      />
    </WithStyles(ForwardRef(ListItemText))>
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    classes={
      Object {
        "root": "listItem",
      }
    }
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <CalendarTodayOutlinedIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primaryTypographyProps={
        Object {
          "variant": "body1",
        }
      }
      secondary="Embargo date"
      secondaryTypographyProps={
        Object {
          "variant": "caption",
        }
      }
    >
      <WithStyles(FileUploadEmbargoDate)
        canBeCleared={false}
        disabled={false}
        minDate={2020-03-27T05:11:01.949Z}
        onChange={[MockFunction]}
        value="01/01/2017"
      />
    </WithStyles(ForwardRef(ListItemText))>
    <WithStyles(ForwardRef(ListItemSecondaryAction))
      classes={
        Object {
          "root": undefined,
        }
      }
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(ForwardRef(ListItemSecondaryAction))>
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;
